src/test/ui/type/type-annotation-needed.stderr
error[E0283]: type annotations needed
  --> $DIR/type-annotation-needed.rs:6:5
   |
LL | fn foo<T: Into<String>>(x: i32) {}
   |    ---    ------------ required by this bound in `foo`
...
LL |     foo(42);
   |     ^^^
   |     |
   |     cannot infer type for type parameter `T` declared on the function `foo`
   |     help: consider specifying the type argument in the function call: `foo::<T>`
   |
   = note: cannot resolve `_: std::convert::Into<std::string::String>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0283`.
